--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ p{
     border: 5px;
     padding: 2px;
     border-radius: 15px;
+    margin: 10px;
+    text-align: center;
     
 }
 h1{
@@ -11,8 +13,14 @@ h1{
     background-color:skyblue ;
     border: 5px;
     padding: 2px;
+    margin: 20px;
+    text-align: center;
+
 }
 img {
     height: 200px;
     width: 200px;
+    border: 5px solid black;
+    border-radius: 5px;
+
 }
